tests/negative/regression/r31.orng
// r31.orng:6:17: error: error: expected a compile-time constant type, got while
//     let x: while true {Int}
//                ^
// 
fn main() -> Int { 
    let x: while true {Int}
}
